--- a/.github/workflows/1.1-echo-hello-world-when-pr-changed.yml
+++ b/.github/workflows/1.1-echo-hello-world-when-pr-changed.yml
@@ -1,7 +1,7 @@
 name: 1.1-echo-hello-world-when-pr-changed.yml
 
 on:
-  pull_request: # Trigger the workflow on pull requests
+  pull_request: # Trigger the workflow on pull requests, change
     types:
       - opened
       - synchronize
