--- a/.github/workflows/1.3-echo-hello-world-when-specific-comment.yml
+++ b/.github/workflows/1.3-echo-hello-world-when-specific-comment.yml
@@ -6,7 +6,7 @@ on:
       - created
 
 jobs:
-  1.3-echo-hello-world-when-specific-comment:
+  echo-hello-world-when-specific-comment:
     if: ${{ github.event.issue.pull_request != null && github.event.comment.body == 'hello you' }}
     runs-on: ubuntu-latest
 
