--- a/.github/workflows/1.2-echo-hello-world-when-push.yml
+++ b/.github/workflows/1.2-echo-hello-world-when-push.yml
@@ -9,4 +9,4 @@ jobs:
 
     steps:
     - name: Say Hello
-      run: echo "Hello, World! This workflow was triggered by a push
+      run: echo "Hello, World! This workflow was triggered by a push"
