--- a/.github/workflows/1.3-echo-hello-world-when-push-to-main.yml
+++ b/.github/workflows/1.3-echo-hello-world-when-push-to-main.yml
@@ -11,4 +11,4 @@ jobs:
 
     steps:
     - name: Say Hello
-      run: echo "Hello, World! This workflow was triggered by a push
+      run: echo "Hello, World! This workflow was triggered by a push"
