--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -14,4 +14,4 @@ jobs:
 
     steps:
     - name: Echo the input message
-      run: "You entered: ${{ github.event.inputs.message }}"
+      run: echo "You entered '${{ github.event.inputs.message }}'"
