--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -15,5 +15,6 @@ jobs:
     steps:
     - name: Echo the input message
       run: 
+        MY_MESSAGE=${{ github.event.inputs.message }}
         echo ${{ github.event.inputs.message }}
         echo "\n\n You entered '${{ github.event.inputs.message }}'"
