--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -14,8 +14,7 @@ jobs:
 
     steps:
     - name: Echo the input message
-      run: 
-        MY_MESSAGE=${{ github.event.inputs.message }}
-        echo ${{ github.event.inputs.message }}
-        echo ${{ MY_MESSAGE }}
-        echo "\n\n You entered '${{ github.event.inputs.message }}'"
+      run: |
+        MY_MESSAGE="${{ github.event.inputs.message }}"
+        echo "$MY_MESSAGE"
+        echo "You entered '$MY_MESSAGE'"
