--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -19,4 +19,4 @@ jobs:
         echo ${{ github.event.inputs.message }}
         echo $MY_MESSAGE
         echo "\n\n You entered '${{ github.event.inputs.message }}'"
-        echo "\n\n You entered '${{ MY_MESSAGE }}'"
+        echo "\n\n You entered '$MY_MESSAGE'"
