--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
     - name: Echo the input message
       run: |
+        json='{"name": "Alice", "address": {"city": "Metropolis", "street": "123 Main St"}}'
+        address=$(echo "$json" | jq -r '.name')
+        echo $json
+        echo $address
         MY_MESSAGE="${{ github.event.inputs.message }}"
         echo ${{ github.event.inputs.message }}
         echo $MY_MESSAGE
