--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -20,4 +20,4 @@ jobs:
         echo $MY_MESSAGE
         echo "\n\n You entered '${{ github.event.inputs.message }}'"
         echo "\n\n You entered '${{ MY_MESSAGE }}'"
-        echo "\n\n You entered " + $MY_MESSAGE
+        echo "\n\n You entered " + "${{ MY_MESSAGE }}"
