--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -15,12 +15,11 @@ jobs:
     steps:
     - name: Echo the input message
       run: |
-        # Store the input message in a Bash variable
         MY_MESSAGE="${{ github.event.inputs.message }}"
 
-        echo "$MY_MESSAGE"
 
-        # Echo with a custom message for clarity
+        echo "$MY_MESSAGE"
+        echo ${{ github.event.inputs.message }}
         echo "\n\nYou entered: '${{ github.event.inputs.message }}'"
         echo "\n\nYou entered: '$MY_MESSAGE'"
         echo "\n\nYou entered: $MY_MESSAGE"
