--- a/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
+++ b/.github/workflows/2.1-echo-input-text-with-manual-trigger.yml
@@ -20,6 +20,7 @@ jobs:
 
         echo "$MY_MESSAGE"
         echo ${{ github.event.inputs.message }}
+        echo github.event.inputs.message 
         echo "\n\nYou entered: '${{ github.event.inputs.message }}'"
         echo "\n\nYou entered: '$MY_MESSAGE'"
         echo "\n\nYou entered: $MY_MESSAGE"
