--- a/.github/workflows/3.1-serializing-data-when-manual-trigger.yml
+++ b/.github/workflows/3.1-serializing-data-when-manual-trigger.yml
@@ -9,4 +9,4 @@ jobs:
     steps:
     - name: Serialize and echo github context
       run: |
-        echo '${{ toJson(github) }}' | jq .
+        echo '${{ toJson(github) }}'
