--- a/.github/workflows/4.1-echoing-relevant-data-when-specific-comment.yml
+++ b/.github/workflows/4.1-echoing-relevant-data-when-specific-comment.yml
@@ -3,7 +3,7 @@ name: 4.1-echoing-relevant-data-when-specific-comment
 on:
   issue_comment: 
     types:
-      - created
+      - created # asd
 
 jobs:
   serializing-data:
