--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -7,10 +7,14 @@ on:
 
 jobs:
   serializing-data:
-    if: ${{ github.event.issue.pull_request != null && github.event.comment.body == '/trigger-hello-world-comment' }}
     runs-on: ubuntu-latest
 
     steps:
+    - name: debug
+      run: |
+        echo github.event.issue.pull_request
+        echo null && github.event.comment.body 
+        echo '/trigger-hello-world-comment'
     - name: Serialize and echo github context
       run: |
         echo '${{ toJson(github) }}'
