--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -11,7 +11,7 @@ jobs:
     - name: debug
       run: |
         echo github.event.issue.pull_request
-        echo null && github.event.comment.body 
+        echo github.event.comment.body 
         echo '/trigger-hello-world-comment'
     - name: Serialize and echo github context
       run: |
