--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -11,11 +11,11 @@ jobs:
     - name: Serialize and echo github context
       run: |
         echo '${{ toJson(github) }}'
-        
+
     - name: debug
       run: |
-        echo github.event.issue.pull_request
-        echo github.event.comment.body 
+        echo ${{ github.event.issue.pull_request }}
+        echo ${{ github.event.comment.body  }}
         echo '/trigger-hello-world-comment'
     
     - name: trigger-hello-world-comment
