--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -22,5 +22,7 @@ jobs:
       run: |
         COMMENT="hello world"
         curl -X POST \
-          -H "Authorization: token ${GITHUB_TOKEN}" \
-          -d "{\"body\": \"${COMMENT}\"}" \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d "$JSON_PAYLOAD" \
+          "https://api.github.com/repos/${{ github.repository }}/issues/${pr_number}/comments"
