--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   serializing-data:
-    if: ${{ github.event.issue.pull_request != null && github.event.comment.body == '/trigger-relevant-data' }}
+    if: ${{ github.event.comment.body == '/trigger-relevant-data' }} 
     runs-on: ubuntu-latest
 
     steps:
