--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -21,9 +21,8 @@ jobs:
     
     - name: trigger-hello-world-comment
       run: |
-        COMMENT="hello world"
         curl -X POST \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: application/json" \
-          -d "$JSON_PAYLOAD" \
+          -d "hello world" \
           "https://api.github.com/repos/${{ github.repository }}/issues/${pr_number}/comments"
