--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -7,6 +7,10 @@ jobs:
   serializing-data:
     if: ${{ github.event.issue.pull_request != null && github.event.comment.body == '/trigger-hello-world-comment' }}
     runs-on: ubuntu-latest
+    
+    permissions:
+      issues: write
+
 
     steps:
     - name: Serialize and echo github context
