--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -28,6 +28,8 @@ jobs:
     
     - name: trigger-hello-world-comment
       run: |
+        PR_NUMBER=${{ github.event.issue.number }}
+        echo "PR_NUMBER=${PR_NUMBER}"
         curl -X POST \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: application/json" \
