--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         PR_NUMBER=${{ github.event.issue.number }}
         API_URL="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments"
+        echo "API_URL=${API_URL}"
         echo "PR_NUMBER=${PR_NUMBER}"
         curl -X POST \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
