--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -11,22 +11,7 @@ jobs:
     permissions:
       issues: write
 
-
     steps:
-    - name: Serialize and echo github context
-      run: |
-        echo '${{ toJson(github) }}'
-
-    - name: debug
-      run: |
-        echo '123'
-        echo ${{ github.event.issue.pull_request }}
-        echo ${{ github.event.comment.body  }}
-        echo ${{ secrets.GITHUB_TOKEN  }}
-        echo ${{ github.event.issue.number  }}
-        echo ${{ github.repository  }}
-        echo '/trigger-hello-world-comment'
-    
     - name: trigger-hello-world-comment
       run: |
         PR_NUMBER=${{ github.event.issue.number }}
@@ -37,4 +22,11 @@ jobs:
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: application/json" \
           -d '{"body": "hello world"}' \
-          "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments"
+          "${{ API_URL }}"
+        curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          "${{ API_URL }}" \
+          -d '{"body":"Me too"}'
