--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -20,8 +20,7 @@ jobs:
         echo "PR_NUMBER=${PR_NUMBER}"
         curl -L \
           -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          "${{ API_URL }}" \
-          -d '{"body":"Me too"}'
+          -H "Authorization: bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d '{"body": "hello world"}' \
+          "${{ API_URL }}"
