--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -33,8 +33,17 @@ jobs:
         API_URL="https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments"
         echo "API_URL=${API_URL}"
         echo "PR_NUMBER=${PR_NUMBER}"
-        curl -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        curl -L \
+          -X POST \
+          -H "Authorization: bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: application/json" \
           -d '{"body": "hello world"}' \
           "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments"
+        
+      # curl -L \
+      #   -X POST \
+      #   -H "Accept: application/vnd.github+json" \
+      #   -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+      #   -H "X-GitHub-Api-Version: 2022-11-28" \
+      #   "${{ API_URL }}" \
+      #   -d '{"body":"Me too"}'
