--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -1,27 +1,48 @@
-name: Respond to Trigger Comment
-
 on:
-  issue_comment:
-    types: [created]  # Trigger when a new comment is created
+  issue_comment: 
+    types:
+      - created # blah3
 
 jobs:
-  comment-on-pr:
-    if: ${{ github.event.issue.pull_request }}  # Only proceed if the comment is on a pull request
+  serializing-data:
+    if: ${{ github.event.issue.pull_request != null && github.event.comment.body == '/trigger-hello-world-comment' }}
     runs-on: ubuntu-latest
+    
+    permissions:
+      issues: write
+
 
     steps:
-      - name: Post Hello World Comment
-        run: |
-          # Construct the JSON payload for the comment
-          JSON_PAYLOAD=$(jq -n --arg body "hello world" '{body: $body}')
+    - name: Serialize and echo github context
+      run: |
+        echo '${{ toJson(github) }}'
 
-          # Post the comment on the PR
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d "$JSON_PAYLOAD" \
-            "${{ github.event.issue.comments_url }}"
+    - name: debug
+      run: |
+        echo '123'
+        echo ${{ github.event.issue.pull_request }}
+        echo ${{ github.event.comment.body  }}
+        echo ${{ secrets.GITHUB_TOKEN  }}
+        echo ${{ github.event.issue.number  }}
+        echo ${{ github.repository  }}
+        echo '/trigger-hello-world-comment'
+    
+    - name: trigger-hello-world-comment
+      run: |
+        # Construct the JSON payload for the comment
+        JSON_PAYLOAD=$(jq -n --arg body "hello world" '{body: $body}')
 
-      - name: Show completion message
-        run: |
-          echo "Commented: hello world"
+        # Post the comment on the PR
+        curl -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          -d "$JSON_PAYLOAD" \
+          "${{ github.event.issue.comments_url }}"
+        
+      # curl -L \
+      #   -X POST \
+      #   -H "Accept: application/vnd.github+json" \
+      #   -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+      #   -H "X-GitHub-Api-Version: 2022-11-28" \
+      #   "${{ API_URL }}" \
+      #   -d '{"body":"Me too"}'
