--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -12,14 +12,10 @@ jobs:
     steps:
       - name: Post Hello World Comment
         run: |
-          # Construct the JSON payload for the comment
-          JSON_PAYLOAD="hello asd"
-
-          # Post the comment on the PR
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
-            -d '{"body":"Me too"}' \
+            -d '{ "body": "hello world" }' \
             "${{ github.event.issue.comments_url }}"
 
       - name: Show completion message
