--- a/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
+++ b/.github/workflows/4.2-comment-hello-world-when-specific-comment.yml
@@ -15,9 +15,5 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
-            -d '{ "body": "hello world" }' \
+            -d '{ "body": "hello world2" }' \
             "${{ github.event.issue.comments_url }}"
-
-      - name: Show completion message
-        run: |
-          echo "Commented: hello world"
