--- a/.github/workflows/4.3-comment-with-relevant-data-when-specific-comment.yml
+++ b/.github/workflows/4.3-comment-with-relevant-data-when-specific-comment.yml
@@ -19,5 +19,5 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
-            -d '{ "body": "hello world2" }' \
+            -d '{ "body": "relevant data" }' \
             "${{ github.event.issue.comments_url }}"
