--- a/.github/workflows/4.3-comment-with-relevant-data-when-specific-comment.yml
+++ b/.github/workflows/4.3-comment-with-relevant-data-when-specific-comment.yml
@@ -19,5 +19,5 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
-            -d '{ "body": "${{ github.repository_owner}} triggered this comment with ${{ github.event.comment.body }}" }' \
+            -d '{ "body": "${{ github.repository_owner}} triggered this comment with '${{ github.event.comment.body }}'" }' \
             "${{ github.event.issue.comments_url }}"
