--- a/.github/workflows/5.3-starting-one-workflow-from-another-pass-input-when-manual-trigger.yml
+++ b/.github/workflows/5.3-starting-one-workflow-from-another-pass-input-when-manual-trigger.yml
@@ -27,6 +27,6 @@ jobs:
               workflow_id,
               ref,
               inputs: {
-                message: github.event.inputs.init_message
+                message: ${{ github.event.inputs.init_message }}
               }
             });
