--- a/.github/workflows/4.4-comment-hello-space-when-manually-triggered.yml
+++ b/.github/workflows/4.4-comment-hello-space-when-manually-triggered.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Post Relevant data Comment
         run: |
           echo "${{ github.event.inputs.pr_number }}"
-          echo "https://github.com/${{ github.repository }}/pull/${{ github.event.inputs.pr_number }}" 
+          echo "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.inputs.pr_number }}/comments" 
         # curl -X POST \
         #   -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
         #   -H "Content-Type: application/json" \
