--- a/.github/workflows/4.4-comment-hello-space-when-manually-triggered.yml
+++ b/.github/workflows/4.4-comment-hello-space-when-manually-triggered.yml
@@ -23,5 +23,5 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
-            -d '{ "body": "${{ github.repository_owner}} triggered this comment with '${{ github.event.comment.body }}'" }' \
+            -d '{ "body": "hello space" }' \
             "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.inputs.pr_number }}/comments" 
