--- a/.github/workflows/6.2-echoing-code-from-a-newly-created-file-in-a-repo.yml
+++ b/.github/workflows/6.2-echoing-code-from-a-newly-created-file-in-a-repo.yml
@@ -17,6 +17,6 @@ jobs:
         run: |
           echo "Your text here" > file.txt
 
-      - name: Display the contents of the readme
+      - name: Display the contents of the file.txt
         run: |
           cat ./file.txt
