--- a/.github/workflows/6.3-echoing-code-from-a-replaced-file-in-a-repo.yml
+++ b/.github/workflows/6.3-echoing-code-from-a-replaced-file-in-a-repo.yml
@@ -17,10 +17,10 @@ jobs:
         run: |
           rm ./readme.md
 
-      - name: Create a new file
+      - name: Create a new readme.md file
         run: |
           echo "Your new readme here" > readme.md
 
-      - name: Display the contents of the file.txt
+      - name: Display the contents of the readme.md
         run: |
           cat ./readme.md
