--- a/.github/workflows/7.1-using-shell-scripts-to-echo-hello-world.yml
+++ b/.github/workflows/7.1-using-shell-scripts-to-echo-hello-world.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Run Shell Script
         run: |
           ls -A ./
+          ls -A ./.github/workflows/scripts
 
       # - name: Run Shell Script
       #   run: |
