--- a/.github/workflows/7.1-using-shell-scripts-to-echo-hello-world.yml
+++ b/.github/workflows/7.1-using-shell-scripts-to-echo-hello-world.yml
@@ -18,7 +18,7 @@ jobs:
           ls -A ./
           ls -A ./.github/workflows/scripts
 
-      # - name: Run Shell Script
-      #   run: |
-      #     chmod +x ./.github/workflows/scripts/hello-world.sh
-      #     ./.github/workflows/scripts/hello-world.sh
+      - name: Run Shell Script
+        run: |
+          chmod +x ./.github/workflows/scripts/hello-world.sh
+          ./.github/workflows/scripts/hello-world.sh
