--- a/.github/workflows/7.1-using-shell-scripts-to-echo-hello-world.yml
+++ b/.github/workflows/7.1-using-shell-scripts-to-echo-hello-world.yml
@@ -15,9 +15,5 @@ jobs:
 
       - name: Run Shell Script
         run: |
-          ls -A ./
-          ls -A ./.github/workflows/scripts
-
-      - name: Run Shell Script
-        run: |
+          chmod +x ./.github/workflows/scripts/hello-world.sh
           ./.github/workflows/scripts/hello-world.sh
