--- a/.github/workflows/7.2-using-output-from-shell-script.yml
+++ b/.github/workflows/7.2-using-output-from-shell-script.yml
@@ -1,1 +1,20 @@
-- 7.2-using-output-from-shell-script
+name: 7.2-using-output-from-shell-script
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  run-shell-script:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run Shell Script
+        run: |
+          chmod +x ./.github/workflows/scripts/hello-world.sh
+          output=$(bash ./.github/workflows/scripts/hello-world.sh)
+          echo "Script Output: $output"
