--- a/.github/workflows/7.2-using-output-from-shell-script.yml
+++ b/.github/workflows/7.2-using-output-from-shell-script.yml
@@ -17,5 +17,7 @@ jobs:
         run: |
           chmod +x ./.github/workflows/scripts/hello-world.sh
           output=$(bash ./.github/workflows/scripts/hello-world.sh)
+          echo "Script Output: $output"
+          
           short_string=${output:0:5}
           echo "Script Output: $short_string"
