--- a/.github/workflows/8.1-two-jobs-in-parallel.yml
+++ b/.github/workflows/8.1-two-jobs-in-parallel.yml
@@ -10,15 +10,15 @@ jobs:
       - name: Print message from Job 1
         run: |
           echo "This is Job 1"
-          sleep 1
+          sleep 2
           echo "This is Job 1"
-          sleep 1
+          sleep 2
           echo "This is Job 1"
-          sleep 1
+          sleep 2
           echo "This is Job 1"
-          sleep 1
+          sleep 2
           echo "This is Job 1"
-          sleep 1
+          sleep 2
 
   job2:
     runs-on: ubuntu-latest
@@ -26,9 +26,13 @@ jobs:
       - name: Print message from Job 2
         run: |
           echo "This is Job 2"
-          sleep 1
+          sleep 2
           echo "This is Job 2"
-          sleep 1
+          sleep 2
           echo "This is Job 2"
-          sleep 1
+          sleep 2
+          echo "This is Job 2"
+          sleep 2
+          echo "This is Job 2"
+          sleep 2
 
